--- a/frontend/public/views/index.ejs
+++ b/frontend/public/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Smokin' That Roach</title>
     <link rel="stylesheet" href="/styles/stylesheet.css">
     <link rel="stylesheet" href="/styles/style-index.css">
 </head>
@@ -22,6 +22,9 @@
             <input type="text" id="first" name="first" placeholder="Username" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
             <button id="loginbtn">Login</button>
+            <div id="links">
+                <a href="https://www.google.com/" style="text-decoration:none">Create Account</a>
+            </div>
         </div>
     </div>
 
